# CppTemplate

./: .gitignore  CMakeLists.txt  foo.cpp  foo.hpp  main.cpp
test/: CMakeLists.txt  foo_test.cpp
